--- a/css/top.css
+++ b/css/top.css
@@ -61,15 +61,15 @@ h3 {
     border-width: 1px;
 }
 .radius-right {
-    -moz-border-top-right-radius: 7px;
+    -moz-border-radius-topright: 7px;
     -webkit-border-top-right-radius: 7px;
-    -moz-border-bottom-right-radius: 7px;
+    -moz-border-radius-bottomright: 7px;
     -webkit-border-bottom-right-radius: 7px;
 }
 .radius-left {
-    -moz-border-top-left-radius: 7px;
+    -moz-border-radius-topleft: 7px;
     -webkit-border-top-left-radius: 7px;
-    -moz-border-bottom-left-radius: 7px;
+    -moz-border-radius-bottomleft: 7px;
     -webkit-border-bottom-left-radius: 7px;
 }
 /* h4 { */
@@ -118,6 +118,7 @@ h3 {
 /*     width: 95%; */
 /* } */
 #header {
+    position: relative;
     background-color: #444;
 }
 #footer {
@@ -196,7 +197,7 @@ h3 {
     width: 5px;
 }
 #projectmenu a {
-    background: #aaa bottom right no-repeat;
+    background: #bbb bottom right no-repeat;
     color: #000000;
     display: block;
     float: left;
@@ -296,5 +297,11 @@ span.link-disabled {
 }
 div.proc-button {
     padding: 5px 20px;
+}
+div#icon {
+    position: absolute;
+    right: 1px;
+    bottom: 1px;
+    height: 25px;
 }
 /* vim: set ts=4 sw=4 sts=4 expandtab fenc=utf-8: */
